...
            "value": "Nettoyage"
          }
        }
      },
      "extractionState": "manual"
    },
    "Close Preview": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Önizlemeyi Kapat"
          }
...
            "state": "translated",
            "value": "Kopien und Ähnliche"
          }
        }
      }
    },
    "Exact Copies": {
      "extractionState": "manual",
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Birebir Kopyalar"
...
            "state": "translated",
            "value": "Verbinden Sie nicht verfügbare Quellen erneut oder entfernen Sie deren Elemente aus der Auswahl."
          }
        }
      }
    },
    "Compare Group": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Compare Group"
...
            "state": "translated",
            "value": "Fotoaktionen"
          }
        }
      }
    },
    "Chosen by You": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Chosen by You"
...
